--- a/Frontend/src/app/view-procurement-request-approval/view-procurement-request-approval.component.html
+++ b/Frontend/src/app/view-procurement-request-approval/view-procurement-request-approval.component.html
@@ -1,6 +1,6 @@
 <div class="content" *ngIf="ProcurementRequestDetails != undefined">
   <div style="display: inline-block; text-align: left;position: relative;width: 700px;" *ngIf="ProcurementRequestDetails.vendor.vendor_Status_ID == 6;">
-    <h1 style="margin: 1%;  color: #244688; font-weight:700; font-size:24pt;" >
+    <h1 style="margin: 1%;margin-left: 0px;  color: #244688; font-weight:700; font-size:24pt;" >
         <button  mat-raised-button routerLink="/ViewPendingProcurementRequest" style="float:left; background-color:#244688; color:white;margin-right: 1%;"><mat-icon style="margin-right: 0px;">arrow_back</mat-icon></button>
         Procurement Request For {{ProcurementRequestDetails.vendor.name}}
       </h1>
@@ -101,7 +101,7 @@
 </div>
 <!--  -->
 <div style="display: inline-block; text-align: left;position: relative;width: 700px;" *ngIf="ProcurementRequestDetails.vendor.vendor_Status_ID != 6" >
-  <h1 style="margin: 1%;  color: #244688; font-weight:700; font-size:20pt;" >
+  <h1 style="margin: 1%;margin-left: 0px;  color: #244688; font-weight:700; font-size:20pt;" >
     <button  mat-raised-button routerLink="/ViewPendingProcurementRequest" style="float:left; background-color:#244688; color:white;margin-right: 1%;"><mat-icon style="margin-right: 0px;">arrow_back</mat-icon></button>
     Procurement Request For {{ProcurementRequestDetails.vendor.name}}
   </h1>
