--- a/Frontend/src/app/place-procurement-request-create-details/place-procurement-request-create-details.component.css
+++ b/Frontend/src/app/place-procurement-request-create-details/place-procurement-request-create-details.component.css
@@ -74,10 +74,12 @@ label {
 
 .col-7{
     display: inline-flex;
+    align-items: center;
 }
 
 .col-5{
     text-align: left;
+    align-self: center;
 }
 
 .row{
