--- a/Frontend/src/app/view-audit-log/view-audit-log.component.html
+++ b/Frontend/src/app/view-audit-log/view-audit-log.component.html
@@ -32,13 +32,20 @@
         <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
             View Audit Log
         </h1>
+        <mat-form-field appearance="fill" id="FVal"
+            style=" float:right; font-size: 12px; width: 200px; margin-top:0.5%; margin-right:1%;">
+            <mat-label>Sort By:</mat-label>
+            <mat-select (selectionChange)="OnInPutChange()" [(ngModel)]="searchWord">
+                <mat-option *ngFor="let filter of filters" [value]="filter">{{filter}}</mat-option>
+            </mat-select>
+        </mat-form-field>
 
         <div class="d-flex justify-content-center">
             <span class="loader" id="loading"></span>
         </div>
 
         <div style="margin-right:1%; margin-left:1%;">
-            <table mat-table [dataSource]="Logs" class="mat-elevation-z8" id="table">
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" id="table">
 
 
 
@@ -62,6 +69,9 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumns" style="background-color:#244688;"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
+            <mat-paginator style="background-color: #eee;" [length]="100" [pageSize]="10"
+                [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
+            </mat-paginator>
 
 
         </div>
