--- a/Frontend/src/app/view-procurement-details/view-procurement-details.component.html
+++ b/Frontend/src/app/view-procurement-details/view-procurement-details.component.html
@@ -8,10 +8,10 @@
             </div>
 
             <a mat-list-item class="uni-font" routerLink="/ViewProcurementRequest">View Procurement Requests</a>
-            <a mat-list-item class="uni-font" routerLink="/ViewPendingProcurementRequest">View Pending Procurement
+            <a mat-list-item *ngIf="canViewPenPro" class="uni-font" routerLink="/ViewPendingProcurementRequest">View Pending Procurement
                 Request</a>
             <a mat-list-item class="uni-font" routerLink="/PlaceProcurementRequest">Place Procurement Details</a>
-            <a mat-list-item class="uni-font" routerLink="/ViewFlaggedProcurementRequest">View Flagged Procurement
+            <a mat-list-item *ngIf="canViewFlagPro" class="uni-font" routerLink="/ViewFlaggedProcurementRequest">View Flagged Procurement
                 Details</a>
             <a mat-list-item class="uni-font" routerLink="/ViewProcurementDetails">View Procurement Details</a>
             <a mat-list-item class="uni-font" routerLink="/ViewUnapprovedRequests">View Unapproved Requests</a>
