--- a/Frontend/src/app/create-budget-allocation/create-budget-allocation.component.html
+++ b/Frontend/src/app/create-budget-allocation/create-budget-allocation.component.html
@@ -11,19 +11,6 @@
                         <tr>
                             <td style="width:100%;">
                                 <mat-card-content>
-                                    <label style=" color:black;">Date Created:</label>
-                                    <br />
-                                    <mat-form-field>
-                                        <input matInput [matDatepicker]="picker" placeholder="Choose a date"
-                                            formControlName="date_Created" id="date_Created"
-                                            [(ngModel)]="budgetAllocation.date_Created" required>
-                                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                                        <mat-datepicker #picker></mat-datepicker>
-                                    </mat-form-field>
-                                </mat-card-content>
-                            </td>
-                            <td style="width:100%;">
-                                <mat-card-content>
                                     <label style=" color:black;">Total (R):</label>
                                     <br />
                                     <mat-form-field>
@@ -45,14 +32,8 @@
                                     <br />
                                     <mat-form-field>
                                         <mat-label>Choose a year</mat-label>
-                                        <input matInput [matDatepicker]="dp1" formControlName="year" readonly
-                                            (click)="dp1.open()">
-                                        <mat-datepicker-toggle matIconSuffix [for]="dp1">
-                                            <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
-                                        </mat-datepicker-toggle>
-                                        <mat-datepicker #dp1 startView="year"
-                                            (monthSelected)="monthSelectedHandler($event, dp1)"
-                                            [startAt]="currentDate"></mat-datepicker>
+                                        <input matInput type="text" placeholder="" formControlName="year" id="year"
+                                            [(ngModel)]="budgetAllocation.year" required>
                                     </mat-form-field>
                                 </mat-card-content>
                             </td>
