--- a/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
+++ b/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
@@ -11,6 +11,7 @@
             <a mat-list-item class="uni-font" routerLink="/ViewBudgetCategory">Budget Categories</a>
             <a mat-list-item class="uni-font" routerLink="/ViewBudgetAllocation">Budget Allocations</a>
             <a mat-list-item class="uni-font" routerLink="/FinalizeProcurementRequest">Finalize Procurement Requests</a>
+            <a mat-list-item class="uni-font" routerLink="/VarianceReport">Variance Report</a>
 
 
         </mat-nav-list>
@@ -38,7 +39,7 @@
 
         <div style="margin-right:1%; margin-left:1%;">
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-               
+
                 <ng-container matColumnDef="department">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Department </th>
                     <td mat-cell *matCellDef="let BudgetAllocations">{{BudgetAllocations.department.name}}</td>
@@ -54,7 +55,8 @@
                 </ng-container>
                 <ng-container matColumnDef="total">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Total </th>
-                    <td mat-cell *matCellDef="let BudgetAllocations">{{BudgetAllocations.total | currency:'ZAR':'symbol-narrow'}}</td>
+                    <td mat-cell *matCellDef="let BudgetAllocations">{{BudgetAllocations.total |
+                        currency:'ZAR':'symbol-narrow'}}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="lines">
