--- a/Frontend/src/app/place-procurement-request-create-details/place-procurement-request-create-details.component.css
+++ b/Frontend/src/app/place-procurement-request-create-details/place-procurement-request-create-details.component.css
@@ -87,6 +87,14 @@ label {
     height: 70px;
 }
 
+#CBStyle {
+  font-weight: 500;
+}
+
+::ng-deep  .mat-mdc-optgroup-label:first-child{
+  color: white;
+  background-color: #244688;
+}
 
 
 
@@ -166,3 +174,5 @@ label {
       visibility: hidden;
     }
   
+
+ 
