--- a/Frontend/src/app/Reports/report-filter-menu/report-filter-menu.component.html
+++ b/Frontend/src/app/Reports/report-filter-menu/report-filter-menu.component.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 <div mat-dialog-actions align="center">
-    <button mat-raised-button (click)="onConfirm(data.ID)" style="color: white; background-color: #94CC5B;" [disabled]="!range.valid">Generate</button>
+    <button mat-raised-button (click)="onConfirm(data.ID, data.sDownload)" style="color: white; background-color: #94CC5B;" [disabled]="!range.valid">Generate</button>
     <button mat-raised-button (click)="onCancel()" style="color: white; background-color: #244688;">Cancel</button>
 </div>
 
