--- a/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.css
+++ b/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.css
@@ -27,3 +27,41 @@
 label {
   font-weight: bold;
 }
+
+
+.table-striped>tbody>tr:nth-of-type(odd)>*{
+  background-color: #b4c6e7;
+}
+
+.table-striped>tbody>tr:nth-of-type(even)>*{
+  background-color:#d9e2f3;
+}
+
+td {
+  align-self: center;
+  vertical-align: middle;
+}
+
+
+
+
+.split-button-left {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  background-color: #244688;
+  color: white;
+}
+
+.split-button-right {
+  width: 30px !important;
+  min-width: unset !important;
+  padding: 0 2px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-left: 1px solid #fafafa;
+}
+
+.mat-primary {
+  background-color: #244688;
+  color: white;
+}
