Fixes for access

--- a/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.html
+++ b/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.html
@@ -144,7 +144,7 @@
    <span style="font-weight: 500;">View Report</span>
   </button>
 	<button (click)="CorrectRouting(true)" mat-menu-item>
-    <span style="font-weight: 500;"> Report</span>
+    <span style="font-weight: 500;">Download Report</span>
   </button>
 </mat-menu>
 
