--- a/Frontend/src/app/edit-procurement-request/edit-procurement-request.component.html
+++ b/Frontend/src/app/edit-procurement-request/edit-procurement-request.component.html
@@ -294,7 +294,7 @@
 
                                         <input type="file" id="file1" placeholder="" formControlName="Quote1"
                                             style="border: solid #244688; border-radius: 5px; " accept=".pdf"
-                                            (change)="onFile1Upload($event)" required>
+                                            (change)="onFile1Upload($event)">
                                         <mat-hint align="end">Provide Quote to replace.</mat-hint>
 
                                     </mat-card-content>
