--- a/Frontend/src/app/Delegation/edit-delegation/edit-delegation.component.html
+++ b/Frontend/src/app/Delegation/edit-delegation/edit-delegation.component.html
@@ -33,6 +33,13 @@
                         {{u.username}}
                       </mat-option>
                     </mat-autocomplete>
+                    <mat-hint align="end">Not more then 50 characters long.</mat-hint>
+                    <mat-error *ngIf="myControlError('required')">Name is required</mat-error>
+                    <mat-error *ngIf="myControlError('maxlength')">Limit exceed</mat-error>
+                    <mat-error *ngIf="myControlError('minlength')">
+                      Delegate name must be 2 to 50 characters
+                      long
+                    </mat-error>
                   </mat-form-field>
                 </mat-card-content>
               </td>
