--- a/Frontend/src/app/create-procurement-request/create-procurement-request.component.html
+++ b/Frontend/src/app/create-procurement-request/create-procurement-request.component.html
@@ -254,7 +254,7 @@
                                             style="border: solid #244688; border-radius: 5px; " accept=".pdf"
                                             (change)="onFile1Upload($event)" required>
                                         <br>
-                                        <mat-hint id="Error1" style="color: red; visibility: hidden;">Duplicate files
+                                        <mat-hint id="Error1" style="color: red; display: none;">Duplicate files
                                             not
                                             allowed!</mat-hint>
 
@@ -270,7 +270,7 @@
                                             style="border: solid #244688; border-radius: 5px; " accept=".pdf"
                                             (change)="onFile2Upload($event)" required>
                                         <br>
-                                        <mat-hint id="Error2" style="color: red; visibility: hidden;">Duplicate files
+                                        <mat-hint id="Error2" style="color: red; display: none;">Duplicate files
                                             not
                                             allowed!</mat-hint>
 
@@ -289,7 +289,7 @@
                                             style="border: solid #244688; border-radius: 5px; " accept=".pdf"
                                             (change)="onFile3Upload($event)" required>
                                         <br>
-                                        <mat-hint id="Error3" style="color: red; visibility: hidden;">Duplicate files
+                                        <mat-hint id="Error3" style="color: red; display: none;">Duplicate files
                                             not
                                             allowed!</mat-hint>
 
