--- a/Frontend/src/app/view-flagged-procurement-details/view-flagged-procurement-details.component.html
+++ b/Frontend/src/app/view-flagged-procurement-details/view-flagged-procurement-details.component.html
@@ -211,7 +211,7 @@
             </div>
             <div class="col-7">
                 <mat-form-field appearance="fill">
-                    <input matInput readonly type="number" formControlName="TotalAmount" value="{{this.ProcurementFormGroup.get('TotalAmount')?.value | currency:'R'}}">
+                    <input matInput readonly formControlName="TotalAmount" value="{{this.ProcurementFormGroup.get('TotalAmount')?.value | currency:'R'}}">
                   </mat-form-field>
             </div>
         </div>
