--- a/Frontend/src/app/delete-admin/delete-admin.component.html
+++ b/Frontend/src/app/delete-admin/delete-admin.component.html
@@ -7,7 +7,7 @@
   <p>Are you sure you want to continue?</p>
 </div>
 <div mat-dialog-actions align="end" *ngIf="showConfirmationDialog == true">
-  <button mat-raised-button (click)="onConfirm(data.id)" style="color: white; background-color: #94CC5B;">Yes</button>
+  <button mat-raised-button (click)="onConfirm(data.userID)" style="color: white; background-color: #94CC5B;">Yes</button>
   <button mat-raised-button (click)="onCancel()" style="color: white; background-color: #244688;">Cancel</button>
 </div>
 
