--- a/Frontend/src/app/view-employee/view-employee.component.html
+++ b/Frontend/src/app/view-employee/view-employee.component.html
@@ -143,7 +143,7 @@
         (click)="DeleteEmployee(Employees.user_Id)"><mat-icon matPrefix
           style="margin-right:10%;">delete</mat-icon>Delete</button>-->
 
-            <button class="noselect" (click)="DeleteEmployee(Employees.user_Id)">
+            <button class="noselect" (click)="DeleteEmployee(Employees.user_Id, Employees.employeeID, Employees.user.username)">
               <span class='text'>Delete</span>
               <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em"
