--- a/Frontend/src/app/place-procurement-request/place-procurement-request.component.html
+++ b/Frontend/src/app/place-procurement-request/place-procurement-request.component.html
@@ -8,13 +8,14 @@
             </div>
 
             <a mat-list-item class="uni-font" routerLink="/ViewProcurementRequest">View Procurement Requests</a>
-            <a mat-list-item *ngIf="canViewPenPro" class="uni-font" routerLink="/ViewPendingProcurementRequest">View Pending Procurement
+            <a mat-list-item *ngIf="canViewPenPro" class="uni-font" routerLink="/ViewPendingProcurementRequest">View
+                Pending Procurement
                 Request</a>
             <a mat-list-item class="uni-font" routerLink="/PlaceProcurementRequest">Place Procurement Details</a>
-            <a mat-list-item *ngIf="canViewFlagPro" class="uni-font" routerLink="/ViewFlaggedProcurementRequest">View Flagged Procurement
+            <a mat-list-item *ngIf="canViewFlagPro" class="uni-font" routerLink="/ViewFlaggedProcurementRequest">View
+                Flagged Procurement
                 Details</a>
             <a mat-list-item class="uni-font" routerLink="/ViewProcurementDetails">View Procurement Details</a>
-            <a mat-list-item class="uni-font" routerLink="/ViewUnapprovedRequests">View Unapproved Requests</a>
 
         </mat-nav-list>
     </mat-sidenav>
@@ -68,25 +69,25 @@
                     <td mat-cell *matCellDef="let procurement"> {{procurement.vendor.name}} </td>
                 </ng-container>
 
-                    <ng-container matColumnDef="View">
-                        <th mat-header-cell *matHeaderCellDef></th>
-                        <td mat-cell *matCellDef="let procurement" style="width:100px;">
+                <ng-container matColumnDef="View">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let procurement" style="width:100px;">
 
-                            <button class="noselect" type="button" style="background-color: #94CC5B;"
-                                routerLink="/PlaceProcurementRequestCreateDetails/{{procurement.procurement_Request_ID}}">
-                                <span class='text'>Create</span>
-                                <span class="icon" style="border-left: 1px solid #94CC5B; ">
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-                                        <path
-                                            d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z" />
-                                    </svg>
-                                </span>
-                            </button>
-                        </td>
-                    </ng-container>
+                        <button class="noselect" type="button" style="background-color: #94CC5B;"
+                            routerLink="/PlaceProcurementRequestCreateDetails/{{procurement.procurement_Request_ID}}">
+                            <span class='text'>Create</span>
+                            <span class="icon" style="border-left: 1px solid #94CC5B; ">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                                    <path
+                                        d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z" />
+                                </svg>
+                            </span>
+                        </button>
+                    </td>
+                </ng-container>
 
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns" style="background-color:#244688;"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns" style="background-color:#244688;"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
             <mat-paginator style="background-color: #eee;" [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5"
                 aria-label="Select page of GitHub search results"></mat-paginator>
