--- a/Frontend/src/app/view-procurement-details/view-procurement-details.component.html
+++ b/Frontend/src/app/view-procurement-details/view-procurement-details.component.html
@@ -80,7 +80,7 @@
                     </th>
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
                         <button mat-raised-button
-                            (click)="openDialog(procurement.buyer_Name, procurement.procurement_Request_ID)"
+                            (click)="openDialog(procurement.buyer_Name, procurement.procurement_Details_ID)"
                             type="button"
                             style="margin-right: 5%; display: flex; align-items: center; font-weight:bold ; width: 180px; margin-top: 0.5%; background-color: rgba(148, 204, 91, 0.5);"
                             *ngIf="procurement.procurement_Status_ID == 2; else NotDisabled" disabled>
@@ -88,9 +88,9 @@
                         </button>
                         <ng-template #NotDisabled>
                             <button mat-raised-button
-                                (click)="openDialog(procurement.buyer_Name, procurement.procurement_Request_ID)"
+                                (click)="openDialog(procurement.buyer_Name, procurement.procurement_Details_ID)"
                                 type="button"
-                                style="margin-right: 5%; display: flex; align-items: center; font-weight:bold ; width: 180px; margin-top: 0.5%; background-color: gray;">
+                                style="margin-right: 5%; display: flex; align-items: center; font-weight:bold ; width: 180px; margin-top: 0.5%; background-color: #94CC5B;">
                                 Proof of Payment
                             </button>
                         </ng-template>
@@ -103,7 +103,7 @@
                     </th>
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
                         <button mat-raised-button
-                            (click)="openInvDialog(procurement.buyer_Name, procurement.procurement_Request_ID)"
+                            (click)="openInvDialog(procurement.buyer_Name, procurement.procurement_Details_ID)"
                             type="button"
                             style="margin-right: 5%; display: flex; align-items: center; font-weight: bold; width: 133px; margin-top: 0.5%; background-color: #94CC5B;">
                             Invoice
@@ -116,9 +116,8 @@
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
 
-                        <button
-                            *ngIf="procurement.procurement_Status_ID == 5 || procurement.procurement_Status_ID == 2; else NoIssue"
-                            class="disabled" type="button" style="background-color: rgba(148, 204, 91, 0.5);"
+                        <button *ngIf="procurement.itemReceived == true; else NoIssue" class="disabled" type="button"
+                            style="background-color: rgba(148, 204, 91, 0.5);"
                             routerLink="/ReceiveProcurementItem/{{procurement.procurement_Details_ID}}" disabled>
                             <span class='text' style="color: gray;">Receive</span>
                         </button>
