added more validation and fixed where needed also adjusted vendor details insurnace and fix styling of exporting DDCL

--- a/Frontend/src/app/edit-budget-allocation/edit-budget-allocation.component.html
+++ b/Frontend/src/app/edit-budget-allocation/edit-budget-allocation.component.html
@@ -9,7 +9,7 @@
                 <mat-card-subtitle>
                     <table style="width:100%;" cellspacing="0">
                         <tr>
-                            <td style="width:100%;">
+                            <!-- <td style="width:100%;">
                                 <mat-card-content>
                                     <label style=" color:black;">Date Created:</label>
                                     <br />
@@ -21,7 +21,7 @@
                                         <mat-datepicker #picker></mat-datepicker>
                                     </mat-form-field>
                                 </mat-card-content>
-                            </td>
+                            </td> -->
                             <td style="width:100%;">
                                 <mat-card-content>
                                     <label style=" color:black;">Total (R):</label>
