--- a/Frontend/src/app/Reports/report-filter-menu/report-filter-menu.component.html
+++ b/Frontend/src/app/Reports/report-filter-menu/report-filter-menu.component.html
@@ -5,9 +5,9 @@
     <div style="display: inline-flex;flex-direction: column;">
         <mat-form-field>
             <mat-label>Enter a date range</mat-label>
-            <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-              <input matStartDate formControlName="start" readonly placeholder="Start date" (click)="picker.open()">
-              <input matEndDate formControlName="end" readonly placeholder="End date" (click)="picker.open()">
+            <mat-date-range-input [formGroup]="range" [rangePicker]="picker" [max]="MaxDate">
+              <input matStartDate formControlName="start" readonly placeholder="Start date" (click)="picker.open()" >
+              <input matEndDate formControlName="end" readonly placeholder="End date" (click)="picker.open()" >
             </mat-date-range-input>
             <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
